--- a/index.html
+++ b/index.html
@@ -29,6 +29,31 @@
         </nav>
       </div>
     </header>
+    <!-- hero -->
+    <section class="hero">
+      <img src="images/circle half.png" alt="" class="circle-one" />
+      <img src="images/Ellipse 2.png" alt="" class="circle-two" />
+      <div class="container">
+        <div class="split">
+          <!-- left side -->
+          <div class="hero-left">
+            <h1 class="h1">discover and collect nfts</h1>
+            <p class="body">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis,
+              enim ad aspernatur minima consequatur quia.
+            </p>
+            <div class="btn-wrap">
+              <a href="#" class="btn subheading">buy NFTs</a>
+              <a href="#" class="ghost subheading">sell NFTs</a>
+            </div>
+          </div>
+          <!-- right side -->
+          <div class="hero-right">
+            <img src="images/hero comp.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="./main.js"></script>
   </body>
 </html>
